--- a/public_html/index.html
+++ b/public_html/index.html
@@ -49,7 +49,7 @@
            </div>
             <div class="container">
               <div class="carousel-caption text-left">
-                <h1>Ihr Anwalt in Rockenberg und Umgebung</h1>
+                <h1 class="h1ShadowBlack">Ihr Anwalt in Rockenberg und Umgebung</h1>
                 <p>- Alles, was Recht ist -</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Kontakt</a></p>
               </div>
