--- a/public_html/index.html
+++ b/public_html/index.html
@@ -39,8 +39,8 @@
       <main role="main">
       <!--input type="text" ng-model="test"><br>
         {{test}}
-      >
-      <div ng-include="'templates/sliderMain.html'"-->
+      -->
+      <div id="sliderMain" ng-include="'templates/sliderMain.html'">
           
       </div>
       <div id='view' ng-view></div>
@@ -66,9 +66,10 @@
         <script src="assets/js/vendor/ngRoute.js" type="text/javascript"></script>
         <script src="assets/js/vendor/bootstrap.min.js" type="text/javascript"></script>
         <script src="assets/js/routing.js" type="text/javascript"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="assets/js/vendor/popper.min.js"></script>
+        <!--script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script-->
+        <script src="../../assets/js/vendor/jquery-slim.min.js"></script>
+        <script src="assets/js/vendor/popper.min.js"></script>
     
     <!-- Just to make our placeholder images work. Don't actually copy the next line! >
     <script src="../../assets/js/vendor/holder.min.js"></script-->
